<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_drawer_home"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/menu_inicio" />
    <item
        android:id="@+id/nav_drawer_products"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/menu_tienda" />
    <item
        android:id="@+id/nav_drawer_services"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/menu_servicios" />
    <item
        android:id="@+id/nav_drawer_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/menu_mi_cuenta" />
    <item
        android:id="@+id/nav_drawer_logout"
        android:icon="@android:drawable/ic_lock_power_off"
        android:title="@string/menu_salir" />
</menu>