<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:background="@color/azul_oscuro"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="@dimen/spacing_lg">

    <!-- Avatar del usuario o Logo -->
    <androidx.cardview.widget.CardView
        android:layout_width="64dp"
        android:layout_height="64dp"
        app:cardCornerRadius="32dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@color/white">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/desc_logo_app" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/nav_header_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/nav_header_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bienvenido_a_tu_aventura"
        android:textColor="@color/white"
        android:textSize="14sp" />

</LinearLayout>